--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.1.0",
     "react-native": "0.70.13",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.2",
